--- a/TrackMySleepQuality-Starter/build.gradle
+++ b/TrackMySleepQuality-Starter/build.gradle
@@ -21,10 +21,10 @@ buildscript {
     ext {
         kotlin_version = '1.3.11'
         archLifecycleVersion = '1.1.1'
-        room_version = '2.0.0'
+        room_version = '2.2.5'
         coroutine_version = '1.0.0'
         gradleVersion = '3.3.0'
-        navigationVersion = '1.0.0-alpha08'
+        navigationVersion = '1.0.0'
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
     }
 
