--- a/RecyclerViewClickHandler-Starter/build.gradle
+++ b/RecyclerViewClickHandler-Starter/build.gradle
@@ -19,12 +19,12 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.3.10'
+        kotlin_version = '1.3.61'
         archLifecycleVersion = '1.1.1'
-        room_version = '2.0.0'
+        room_version = '2.2.5'
         coroutine_version = '1.0.0'
         gradleVersion = '3.4.0'
-        navigationVersion = '1.0.0-alpha07'
+        navigationVersion = '1.0.0'
         dataBindingCompilerVersion = gradleVersion // Always need to be the same.
     }
 
